# Mody-Deluxe

./: CMakeLists.txt  README.md
config/: sample_rules.json
src/: FFmpegCommandBuilder.cpp  FFmpegCommandBuilder.h  MediaManager.cpp  MediaManager.h  PreviewPlayer.cpp  PreviewPlayer.h  RemixRuleEngine.cpp  RemixRuleEngine.h  Utils.cpp  Utils.h  main.cpp
tools/: package_release.bat
